[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]

requires-python = ">=3.11.3"

name = "xy_file"

authors = [{ name = "yuyangit", email = "yuyangit.0515@qq.com" }]
description = "文件相关处理模块"

dynamic = ["version"]

readme = "README.md"

classifiers = ["Programming Language :: Python :: 3"]

dependencies = ["rich"]

[project.scripts]
xy_file = "xy_file.execute.Main:main"

[tool.setuptools.packages]
find = {}

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { file = "VERSION" }
